--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="./recipes/chicken_stew.html">Chicken Stew Recipe</a></li>
+            <li><a href="./recipes/ice_cream.html">Ice Cream Recipe</a></li>
+        </ul>
     </body>
 </html>
