--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,59 @@
     </head>
     <body>
         <h1>Lasagna Recipe</h1>
+        <img src="../images/deliciouslasagna.jpg" alt="Charles the dog">
+
+        <h2>Description</h2>
+
+        <p>
+            This recipe is not exactly ideal to look at and salivate over in
+            a month that we are all on our low carb, Keto, paleo, weight watchers,
+            cabbage soup, low fat, low carb, rabbit food diets. But…It’s Lasagna.
+            And I DO know that many of us still have to cook ‘normal’ foods for our
+            families.
+        </p>
+        <p>
+            My mama’s famous lasagna recipe is hands down the best lasagna I have
+            ever had in my life. She learnt her ways from her Italian friends when
+            she lived in New York City, adjusting the recipe through the years to
+            perfect it…and every single person that tries her recipe comes back for
+            seconds, thirds and leftovers for the next day!
+        </p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Tomato Sauce</li>
+            <li>Tomato</li>
+            <li>Beef</li>
+            <li>Bell Pepper</li>
+            <li>Red Wine</li>
+            <li>Milk</li>
+            <li>Lasagna Sheet</li>
+            <li>Salt</li>
+            <li>Garlic</li>
+            <li>Parsley</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Cook noodles according to package directions; drain. Meanwhile, in a
+                Dutch oven, cook sausage, beef and onion over medium heat 8-10 minutes
+                or until meat is no longer pink, breaking up meat into crumbles. Add
+                garlic; cook 1 minute. Drain
+            </li>
+            <li>Stir in tomatoes, tomato paste, water, sugar, 3 tablespoons parsley, 
+                basil, fennel, 1/2 teaspoon salt and pepper; bring to a boil. Reduce heat;
+                simmer, uncovered, 30 minutes, stirring occasionally.
+            </li>
+            <li>In a small bowl, mix egg, ricotta cheese and remaining parsley and salt.</li>
+            <li>Preheat oven to 375°. Spread 2 cups meat sauce into an ungreased 13x9-in. baking dish.
+                Layer with 3 noodles and a third of the ricotta mixture. Sprinkle with 1 cup mozzarella
+                cheese and 2 tablespoons Parmesan cheese. Repeat layers twice. Top with remaining meat
+                sauce and cheeses (dish will be full).
+            </li>
+            <li>Bake, covered, 25 minutes. Bake, uncovered, 25 minutes longer or until bubbly.
+                Let stand 15 minutes before serving.
+            </li>
+        </ol>
     </body>
 </html>
