Added links to home page on all other pages

--- a/recipes/chicken_stew.html
+++ b/recipes/chicken_stew.html
@@ -5,6 +5,7 @@
         <title>Chicken Stew Recipe</title>
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Chicken Stew Recipe</h1>
         <img src="../images/chickenStew.jpg" alt="Delicious checken stew">
 
