--- a/recipes/ice_cream.html
+++ b/recipes/ice_cream.html
@@ -5,6 +5,7 @@
         <title>Ice Cream Recipe</title>
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Ice Cream Recipe</h1>
         <img src="../images/homemade-vanilla-ice-cream-recipe.jpg" alt="homemade vanilla ice cream">
 
