--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,6 +5,7 @@
         <title>Lasagna Recipe</title>
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Lasagna Recipe</h1>
         <img src="../images/deliciouslasagna.jpg" alt="Charles the dog">
 
